# share_a_secret

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.md
docs/: build.md  contributing.md  usage.md
src/: main.rs
